[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "coffee-search"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
folium = "^0.10.1"
geopy = "^1.21"
python = "^3.8"
[tool.poetry.dev-dependencies]
